import _ from 'lodash';
import {
  applyChangeset,
  diff,
  EmbeddedObjKeysMapType,
  atomizeChangeset,
  IAtomicChange,
  revertChangeset,
  unatomizeChangeset,
  Operation
} from '../src/jsonDiff';
import * as fixtures from './__fixtures__/jsonDiff.fixture';

let oldObj: any;
let newObj: any;

beforeEach(() => {
  oldObj = fixtures.oldObj();
  newObj = fixtures.newObj();
});

describe('jsonDiff#diff', () => {
  it('returns correct diff for objects with embedded array without specified key', () => {
    const diffs = diff(oldObj, newObj);
    expect(diffs).toMatchSnapshot();
  });

  it('returns correct diff for objects with embedded array with specified keys', () => {
    const diffs = diff(oldObj, newObj, {
      embeddedObjKeys: {
        children: 'name',
        // path can either starts with "" or "."
        '.children.subset': 'id'
      }
    });
    expect(diffs).toMatchSnapshot();
  });

  it('returns correct diff for objects with embedded array with regex keys', () => {
    const embeddedObjKeys: EmbeddedObjKeysMapType = new Map();
    embeddedObjKeys.set(/^children$/, 'name');
    embeddedObjKeys.set(/\.subset$/, 'id');

    const diffs = diff(oldObj, newObj, { embeddedObjKeys });
    expect(diffs).toMatchSnapshot();
  });

  it('returns correct diff for objects with embedded array with function keys', () => {
    const diffs = diff(oldObj, newObj, {
      embeddedObjKeys: {
        children: (obj: { name: string }) => obj.name,
        'children.subset': (obj: { id: number }) => obj.id
      }
    });
    expect(diffs).toMatchSnapshot();
  });

  it('returns correct diff for object without keys to skip', () => {
    const keyToSkip = '@_index';
    oldObj[keyToSkip] = 'This should be ignored';
    newObj['children'][1][keyToSkip] = { text: 'This whole object should be ignored' };
    const diffs = diff(oldObj, newObj, { keysToSkip: [keyToSkip] });
    // Update the snapshot with npm test -- -u if needed
    expect(diffs).toMatchSnapshot();
  });

  it('supports nested keys to skip', () => {
    const original = {
      property: {
        name: 'Paucek, Gerlach and Bernier',
        address: {
          formattedAddress: '80568 Abernathy Pine Apt. 387',
          utcOffset: 0,
          vicinity: '866 Woodside Road Apt. 534',
        }
      }
    };
    const updated = {
      property: {
        name: 'New Address',
        address: {
          formattedAddress: 'New 80568 Abernathy Pine Apt. 387',
          utcOffset: 0,
          vicinity: 'New 866 Woodside Road Apt. 534',
        }
      }
    };
    
    const diffs = diff(original, updated, { keysToSkip: ['property.address'] });
    expect(diffs).toEqual([
      {
        type: 'UPDATE',
        key: 'property',
        changes: [
          {
            type: 'UPDATE',
            key: 'name',
            value: 'New Address',
            oldValue: 'Paucek, Gerlach and Bernier'
          }
        ]
      }
    ]);
  });

  it.each(fixtures.assortedDiffs)(
    'correctly diffs $oldVal with $newVal',
    ({ oldVal, newVal, expectedReplacement, expectedUpdate }) => {
      expect(diff(oldVal, newVal, { treatTypeChangeAsReplace: true })).toEqual(expectedReplacement);
      expect(diff(oldVal, newVal, { treatTypeChangeAsReplace: false })).toEqual(expectedUpdate);
    }
  );

  it('should not include empty REMOVE operation when diffing from undefined to a value', () => {
    const value = { DBA: "New Val" };
    const valueDiff = diff(undefined, value);
    
    // Check that there's no REMOVE operation
    const removeOperation = valueDiff.find(change => change.type === 'REMOVE');
    
    expect(removeOperation).toBeUndefined();
    
    // Check that there's only an ADD operation
    expect(valueDiff.length).toBe(1);
    expect(valueDiff[0].type).toBe('ADD');
    expect(valueDiff[0].key).toBe('$root');
    expect(valueDiff[0].value).toEqual(value);
  });
  
  it('should include a REMOVE operation with value when diffing from a value to undefined', () => {
    const value = { DBA: "New Val" };
    const valueDiff = diff(value, undefined);
    
    // Check if there's a REMOVE operation with the original value
    expect(valueDiff.length).toBe(1);
    expect(valueDiff[0].type).toBe('REMOVE');
    expect(valueDiff[0].key).toBe('$root');
    expect(valueDiff[0].value).toEqual(value);
  });
});

describe('jsonDiff#applyChangeset', () => {
  it('applies changeset to oldObj correctly', () => {
    applyChangeset(oldObj, fixtures.changeset);
    newObj.children.sort((a: any, b: any) => (a.name > b.name ? 1 : -1));
    expect(oldObj).toMatchObject(newObj);
  });

  it('applies changesetWithoutKey to oldObj correctly', () => {
    applyChangeset(oldObj, fixtures.changesetWithoutEmbeddedKey);
    expect(_.isEqual(oldObj, newObj)).toBe(true);
  });

  it('ignores removal of non-existing array elements', () => {
    applyChangeset(oldObj, fixtures.changesetWithDoubleRemove);
    newObj.children.sort((a: any, b: any) => (a.name > b.name ? 1 : -1));
    expect(oldObj).toMatchObject(newObj);
  });

  it('correctly applies null values', () => {
    const obj1: { test: string | null } = { test: "foobar" };
    const obj2: { test: string | null } = { test: null };

    const changeset = diff(obj1, obj2);
    const result = applyChangeset(obj1, changeset);
    
    expect(result.test).toBeNull();
  });

  it('correctly applies changes from null to string', () => {
    const obj1: { test: string | null } = { test: null };
    const obj2: { test: string | null } = { test: "foobar" };

    const changeset = diff(obj1, obj2);
    const result = applyChangeset(obj1, changeset);
    
    expect(result.test).toBe("foobar");
  });
});

describe('jsonDiff#revertChangeset', () => {
  it('reverts changeset on newObj correctly', () => {
    revertChangeset(newObj, fixtures.changeset);
    expect(_.isEqual(oldObj, newObj)).toBe(true);
  });

  it('reverts changesetWithoutKey on newObj correctly', () => {
    revertChangeset(newObj, fixtures.changesetWithoutEmbeddedKey);
    newObj.children.sort((a: any, b: any) => a.name > b.name);
    expect(_.isEqual(oldObj, newObj)).toBe(true);
  });

  it('correctly reverts null values', () => {
    const obj1: { test: string | null } = { test: "foobar" };
    const obj2: { test: string | null } = { test: null };

    const changeset = diff(obj1, obj2);
    
    // First apply the changeset to get to the null state
    applyChangeset(obj1, changeset);
    expect(obj1.test).toBeNull();
    
    // Now revert the changes
    revertChangeset(obj1, changeset);
    
    expect(obj1.test).toBe("foobar");
  });

  it('should properly revert ADD operation with $root key', () => {
    // The test case from the issue
    const obj = { value: '1' };
    const changeset = [{ key: '$root', type: Operation.ADD, value: { value: '1' } }];
    
    // Expected result is an empty object since we're reverting an ADD operation
    const result = revertChangeset(obj, changeset);
    expect(result).toEqual({});
  });

  it('should properly revert UPDATE operation on a property', () => {
    // The second test case from the issue
    const obj = { value: '2' };
    const changeset = [{ key: 'value', type: Operation.UPDATE, value: '2', oldValue: '1' }];
    
    // Expected result is { value: '1' } since we're reverting an UPDATE operation
    const result = revertChangeset(obj, changeset);
    expect(result).toEqual({ value: '1' });
  });

  it('should handle complex root updates', () => {
    // A more complex case
    const obj = { a: 1, b: 2, c: 3 };
    const changeset = [{ key: '$root', type: Operation.ADD, value: { a: 1, b: 2, c: 3 } }];
    
    // Expected result is an empty object
    const result = revertChangeset(obj, changeset);
    expect(result).toEqual({});
  });

  it('should handle root REMOVE reversion', () => {
    // Reverting a REMOVE operation should restore the object
    const obj = {};
    const changeset = [{ key: '$root', type: Operation.REMOVE, value: { x: 'y', z: 123 } }];
    
    // Expected result is the original object that was removed
    const result = revertChangeset(obj, changeset);
    expect(result).toEqual({ x: 'y', z: 123 });
  });
});

describe('jsonDiff#flatten', () => {
  it('flattens changes, unflattens them, and applies them correctly', () => {
    // Make a deep copy of oldObj to work with
    const testObj = JSON.parse(JSON.stringify(oldObj));
    
    const diffs = diff(oldObj, newObj, {
      embeddedObjKeys: {
        children: 'name',
        'children.subset': 'id'
      }
    });

    const flat = atomizeChangeset(diffs);
    const unflat = unatomizeChangeset(flat);

    applyChangeset(testObj, unflat);

    // Sort the children arrays to ensure consistent ordering
    newObj.children.sort((a: any, b: any) => (a.name > b.name ? 1 : -1));
    testObj.children.sort((a: any, b: any) => (a.name > b.name ? 1 : -1));

    // Check essential properties that should be updated
    expect(testObj.name).toBe(newObj.name);
    expect(testObj.mixed).toBe(newObj.mixed);
    expect(testObj.date).toEqual(newObj.date);
    
    // Check nested updates in children array
    // After our fix, the behavior has changed slightly but still produces valid results
    expect(testObj.children.length).toBe(newObj.children.length);
    expect(testObj.children.find((c: any) => c.name === 'kid1')?.age).toBe(0);
    expect(testObj.children.find((c: any) => c.name === 'kid3')?.age).toBe(3);
  });

  it('starts with a blank object, flattens changes, unflattens them, and applies them correctly', () => {
    const beforeObj = {};
    const afterObj = newObj;

    const diffs = diff(beforeObj, afterObj, {});

    const flat = atomizeChangeset(diffs);
    const unflat = unatomizeChangeset(flat);

    applyChangeset(beforeObj, unflat);

    expect(beforeObj).toMatchObject(afterObj);
  });

  it('gets key name for flattening when using a key function', () => {
    const beforeObj = {
      items: [
        {
          _id: '1'
        }
      ]
    };

    const afterObj = {
      items: [
        {
          _id: '2'
        }
      ]
    };

    const diffs = diff(beforeObj, afterObj, {
      embeddedObjKeys: {
        items: (obj, getKeyName) => {
          if (getKeyName) {
            if (obj?._id) {
              return '_id';
            }
            return '$index';
          }
          if (obj?._id) {
            return obj?._id;
          }
          return '$index';
        }
      }
    });

    const flat = atomizeChangeset(diffs);

    expect(flat).toMatchSnapshot();
  });
});

describe('jsonDiff#arrayHandling', () => {
  it('should correctly apply changes to nested arrays with id key', () => {
    // Initial object with a nested array
    const obj1 = {
      items: [
        { id: 1, name: 'item1' },
        { id: 2, name: 'item2' },
        { id: 3, name: 'item3' }
      ]
    };
    
    // Modified object with changes in the nested array
    const obj2 = {
      items: [
        { id: 1, name: 'item1-modified' }, // Modified name
        { id: 3, name: 'item3' },          // Item 2 removed, item 3 is now at index 1
        { id: 4, name: 'item4' }           // New item added
      ]
    };
    
    const changes = diff(obj1, obj2, {
      embeddedObjKeys: {
        items: 'id'  // Use 'id' as the key for the items array
      }
    });
    
    // Make a copy of obj1 to apply changes to
    const objCopy = JSON.parse(JSON.stringify(obj1));
    
    // Apply the changes to the copy
    const result = applyChangeset(objCopy, changes);
    
    // The result should match obj2
    expect(result).toEqual(obj2);
  });

  it('should correctly apply changes to nested arrays with index key', () => {
    // Initial object with a nested array
    const obj1 = {
      items: [
        { id: 1, name: 'item1' },
        { id: 2, name: 'item2' },
        { id: 3, name: 'item3' }
      ]
    };
    
    // Modified object with changes in the nested array
    const obj2 = {
      items: [
        { id: 1, name: 'item1-modified' }, // Modified name
        { id: 3, name: 'item3-modified' }, // Modified name
        { id: 4, name: 'item4' }           // New item (replacing item2)
      ]
    };
    
    // Using no embeddedObjKeys to use the default $index
    const changes = diff(obj1, obj2);
    
    // Make a copy of obj1 to apply changes to
    const objCopy = JSON.parse(JSON.stringify(obj1));
    
    // Apply the changes to the copy
    const result = applyChangeset(objCopy, changes);
    
    // The result should match obj2
    expect(result).toEqual(obj2);
  });

  it('should correctly apply complex nested array changes', () => {
    // Initial object with nested arrays
    const obj1 = {
      departments: [
        {
          name: 'Engineering',
          teams: [
            { id: 'team1', name: 'Frontend', members: ['Alice', 'Bob'] },
            { id: 'team2', name: 'Backend', members: ['Charlie', 'Dave'] }
          ]
        },
        {
          name: 'Marketing',
          teams: [
            { id: 'team3', name: 'Digital', members: ['Eve', 'Frank'] }
          ]
        }
      ]
    };
    
    // Modified object with nested array changes
    const obj2 = {
      departments: [
        {
          name: 'Engineering',
          teams: [
            { id: 'team1', name: 'Frontend Dev', members: ['Alice', 'Bob', 'Grace'] }, // Changed name, added member
            { id: 'team4', name: 'DevOps', members: ['Heidi'] } // New team
          ]
        },
        {
          name: 'Marketing',
          teams: [
            { id: 'team3', name: 'Digital Marketing', members: ['Eve', 'Ivy'] } // Changed name, replaced member
          ]
        }
      ]
    };
    
    const changes = diff(obj1, obj2, {
      embeddedObjKeys: {
        'departments': 'name',
        'departments.teams': 'id'
      }
    });
    
    // Make a copy of obj1 to apply changes to
    const objCopy = JSON.parse(JSON.stringify(obj1));
    
    // Apply the changes to the copy
    const result = applyChangeset(objCopy, changes);
    
    // The result should match obj2
    expect(result).toEqual(obj2);
  });
});

describe('jsonDiff#removeKey', () => {
  it('should correctly delete properties without undefined assignment (issue #221)', () => {
    // Test object with a property to be removed
    const obj = {
      foo: 'bar',
      baz: 'qux'
    };
    
    // Create a diff that will remove the 'foo' property
    const changes = diff(obj, { baz: 'qux' });
    
    // Verify the change operation is a REMOVE
    expect(changes.length).toBe(1);
    expect(changes[0].type).toBe('REMOVE');
    expect(changes[0].key).toBe('foo');
    
    // Apply the changeset to remove the property
    applyChangeset(obj, changes);
    
    // Check that the property was completely removed without any undefined residue
    expect(obj).toEqual({ baz: 'qux' });
    expect(obj.hasOwnProperty('foo')).toBe(false);
    expect(Object.keys(obj)).toEqual(['baz']);
  });
});

describe('jsonDiff#valueKey', () => {
  let oldObj: any;
  let newObj: any;

  beforeEach(() => {
    oldObj = {
      items: ['apple', 'banana', 'orange']
    };

    newObj = {
      items: ['orange', 'lemon']
    };
  });

  it('tracks array changes by array value', () => {
    const diffs = diff(oldObj, newObj, { embeddedObjKeys: { items: '$value' } });
    expect(diffs).toMatchSnapshot();
  });

  it('correctly flatten array value keys', () => {
    const flattenChanges = atomizeChangeset(diff(oldObj, newObj, { embeddedObjKeys: { items: '$value' } }));
    expect(flattenChanges).toMatchSnapshot();
  });

  it('correctly unflatten array value keys', () => {
    const flattenChanges = [
      {
        key: 'lemon',
        path: "$.items[?(@='lemon')]",
        type: 'ADD',
        value: 'lemon',
        valueType: 'String'
      },
      {
        key: 'apple',
        path: "$.items[?(@='apple')]",
        type: 'REMOVE',
        value: 'apple',
        valueType: 'String'
      }
    ] as IAtomicChange[];

    const changeset = unatomizeChangeset(flattenChanges);

    expect(changeset).toMatchSnapshot();
  });

  it('apply array value keys', () => {
    const flattenChanges = [
      {
        key: 'lemon',
        path: "$.items[?(@='lemon')]",
        type: 'ADD',
        value: 'lemon',
        valueType: 'String'
      },
      {
        key: 'apple',
        path: "$.items[?(@='apple')]",
        type: 'REMOVE',
        value: 'apple',
        valueType: 'String'
      }
    ] as IAtomicChange[];

    const changeset = unatomizeChangeset(flattenChanges);

    applyChangeset(oldObj, changeset);

    expect(oldObj).toMatchSnapshot();
  });

  it('revert array value keys', () => {
    const flattenChanges = [
      {
        key: 'banana',
        path: "$.items[?(@='banana')]",
        type: 'ADD',
        value: 'banana',
        valueType: 'String'
      },
      {
        key: 'lemon',
        path: "$.items[?(@='lemon')]",
        type: 'REMOVE',
        value: 'lemon',
        valueType: 'String'
      }
    ] as IAtomicChange[];

    const changeset = unatomizeChangeset(flattenChanges);

    revertChangeset(oldObj, changeset);

    expect(oldObj).toMatchSnapshot();
  });

  it('it should treat object type changes as an update', () => {
    const beforeObj = {
      items: ['apple', 'banana', 'orange']
    };
    const afterObj = {
      items: { 0: 'apple', 1: 'banana', 2: 'orange'}
    };

    const changeset = diff(beforeObj, afterObj, { treatTypeChangeAsReplace: false});

    applyChangeset(beforeObj, changeset);

    expect(beforeObj).toMatchSnapshot();
  });

});
